Subiendo ejercicio 8a completo y adelanto del 8b

--- a/TareaExamen/tareaExamen3/Tarea-ExamenIII.tex
+++ b/TareaExamen/tareaExamen3/Tarea-ExamenIII.tex
@@ -381,6 +381,17 @@ pues $ f(\pm1,0) = 2(\pm1)^2-1 = 1 $
 
 b) Haga lo mismo para la superficie $z = 6xy + 7$\\
 
+Veamos que todos los puntos sobre dicha superficie tendrán la siguiente forma $ (x, y, (6xy + 7)^2)  $, ahora definamos la función distancia como sigue \[ d = \sqrt{x^2 + y^3 + (6xy +7)^2} \]y trabajaremos sin la raíz, por lo que definiremos la función $ f: U \subset \R^2 \to \R $ como $$ f := d^2 =x^2 + y^2 + (6xy + y)^2 $$
+\begin{align*}
+	f(x,y) &= x^2 + y^2 + (6xy + y)^2 \\
+	f(x,y) &= x^2 + y^2 + 6^2x^2y^2 +2\*6xy\*7 +7^2 \\
+	f(x,y) &= 36x^2y^2  + x^2 + y^2 + 48xy + 49 \\
+\end{align*}
+Veamos que en el caso hipotético de que $ x^2 + y^2 = 0 $ el valor más bajo que $ f(x,y) $ tendría es $ 49 $, por lo tanto, la distancia mínima es $ 7 $, pero derivemos para encontrar los demás puntos críticos.
+\begin{align*}
+	content
+\end{align*}
+
 \noindent9. Encuentre los puntos y valores críticos de las siguientes funciones sujetas a las restricciones:\\
 
 
